# vscp-droplet

./: README.md
example/control/: CMakeLists.txt
example/docs/: README.md  alpha-mdf.md  alpha-node-events.md
example/get-started/main/: app_main.c
example/led-ctrl-client/: CMakeLists.txt  sdkconfig
example/led-ctrl-client/main/: app_main.c
example/led-ctrl-controller/main/: Kconfig.projbuild
example/ota/: CMakeLists.txt
example/ota/main/: CMakeLists.txt  app_main.c
example/provisioning/: CMakeLists.txt
example/provisioning/main/: app_main.c
example/receive/: CMakeLists.txt
example/receive/main/: app_main.c
example/security/: CMakeLists.txt
example/simple/: .gitignore  sdkconfig  sdkconfig.old
example/simple/main/: espnow_example.h  espnow_example_main.c
example/solution/: CMakeLists.txt
example/solution/main/: app_main.c
example/test/alpha/: CMakeLists.txt  sdkconfig  sdkconfig.old
example/test/alpha/main/: CMakeLists.txt  espnow_alpha.h  espnow_alpha_main.c  idf_component.yml  vscp_espnow.c  vscp_espnow.h
example/test/beta/: sdkconfig  sdkconfig.old
example/test/beta/main/: espnow_example_main.c
example/test/gamma/: sdkconfig  sdkconfig.old
example/transmit/: genNvsConfigImage.sh
example/transmit/alpha/main/: main.c  provision.c  vscp-projdefs.h  vscp_espnow.h  wifiprov.c
example/transmit/main/: CMakeLists.txt  gatt_svr.c  main.h  regdefs.h  ttt.c  vscp_espnow.c  websrv.h
example/wireless_debug/: CMakeLists.txt
example/wireless_debug/main/: CMakeLists.txt
firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/alpha/: CMakeLists.txt  config.txt  sdkconfig  sdkconfig.old
firmware/alpha/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.h  tcpsrv.c  tcpsrv.h  ttt.c  vscp-projdefs.h  vscp_espnow.c  vscp_espnow.h  wifiprov.c  wifiprov.h
firmware/alpha5/: CMakeLists.txt  README.md  mkspiffs.sh  partitions.csv  sdkconfig  sdkconfig.old  spiffs.img  wifiprov.c
firmware/alpha5/components/net-logging/: CMakeLists.txt  Kconfig.projbuild
firmware/alpha5/docs/: index.md  registers-alpha.md
firmware/alpha5/main/: CMakeLists.txt  Kconfig.projbuild  README.txt  app_main.c  button.c  button.h  callbacks-link.c  callbacks-vscp-protocol.c  main.c  main.h  mqtt.c  mqtt.h  net_logging.c  tcpsrv.c  tcpsrv.h  udp_logging.c  urldecode.c  vscp-droplet.c  vscp-droplet.h  vscp-projdefs.h  websrv.c  websrv.h  wifiprov.c  wifiprov.h
firmware/alpha5/main/save/: led_indicator.c
firmware/alpha5/web/: conf-drop.html  conf-wifi.html  config.html  index.html  style.css  update.html
firmware/beta5/: CMakeLists.txt  README.md  mkspiffs.sh
firmware/beta5/docs/: node-config.md  partition.md
firmware/beta5/main/: CMakeLists.txt  app_main.c  callbacks-vscp-protocol.c  main.c  main.h  vscp-droplet.h  vscp-projdefs.h
firmware/beta5/web/: conf-backup.html  conf-mod.html  index.html  save.html  update.html
firmware/common/: button-gpio.c  button.c  vscp-droplet.c  vscp-droplet.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c  main.h  tcpsrv.h
firmware/save_alpha/: CMakeLists.txt  config.csv  sdkconfig
firmware/save_alpha/main/: CMakeLists.txt  callbacks-link.c  callbacks-vscp-protocol.c  led_indicator.h  main.c  main.h  tcpsrv.c  tcpsrv.h  vscp-projdefs.h  websrv.c  websrv.h  wifiprov.c  wifiprov.h
images/: dropplet-model
simple/: sdkconfig  sdkconfig.old
simple/main/: espnow_example_main.c
test/esp32/ble_raw_advertise/rawadw/: CMakeLists.txt  sdkconfig  sdkconfig.old
test/esp32/ble_raw_advertise/rawadw/main/: CMakeLists.txt  rawadw.c
test/esp32/espnow_logger/: CMakeLists.txt
test/esp32/espnow_logger/main/: CMakeLists.txt  espnow_logger.c  espnow_logger.h
